la in en till sida med en annan uppbyggnad av katalogen

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <ul>
         <li><a class="active" href="index.html">Hem</a></li>
         <li><a href="katalog.html">Kontakta oss</a></li>
+        <li><a href="exempel.html">Exempel</a></li>
     </ul>
     <div class="hem-bakgrund">
         <main class="content">
