--- a/katalog.html
+++ b/katalog.html
@@ -21,6 +21,7 @@
     <ul>
         <li><a href="index.html">Hem</a></li>
         <li><a class="active" href="katalog.html">Kontakta oss</a></li>
+        <li><a href="exempel.html">Exempel</a></li>
     </ul>
     <div class="katalog-bakgrund">
         <div class="katalog-card">
